fix: edit setting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "house-service-client",
+  "name": "house-service-admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
